# 100-Local-AI-Use-Cases-for-Everyday-Life

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apps/learning/01_chat_notes/: app.ipynb
apps/life/00_geo_poetry/: README.md  app.ipynb  prompts.py  schemas.py
apps/life/00_geo_poetry/.ipynb_checkpoints/: app-checkpoint.ipynb  prompts-checkpoint.py  schemas-checkpoint.py
apps/life/00_geo_poetry/i18n/: __init__.py  en.py  zh.py
apps/life/00_geo_poetry/tools/: external_apis.py
core/: environment.py  llm.py
core/.ipynb_checkpoints/: environment-checkpoint.py  llm-checkpoint.py
local_ai_use_cases.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: external_apis.py
tools/.ipynb_checkpoints/: external_apis-checkpoint.py
