[project]
name = "local_ai_use_cases"
version = "0.1.0"
description = "100 Local AI Use Cases for Everyday Life"
authors = [{ name="BigBenLabs" }]
dependencies = [
    httpx>=0.28.1
    ipython>=9.7.0
    langchain_openai>=1.1.10
    pydantic>=2.12.5
    typing_extensions>=4.15.0
    tzlocal>=5.3.1
]

[tool.setuptools.packages.find]
where = ["."]